--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack 1 Webdeveloper Nanodegree  
+  uni: Udacity dd
+  year: June, 2014 &mdash; January, 2015, July
   # awards:
-  # summary:
+  summary: 300
